tests/baselines/reference/parserGreaterThanTokenAmbiguity3.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity3.ts (2 errors) ====
    1 >/**/> 2;
           ~
!!! parserGreaterThanTokenAmbiguity3.ts(1,8): error TS1005: 'expression' expected.
    ~~~~~~~~~~
!!! parserGreaterThanTokenAmbiguity3.ts(1,1): error TS2009: Operator '>' cannot be applied to types 'boolean' and 'number'.